# FOR-field-of-reference-

./: .gitignore  README.md  hello.py  pyproject.toml
conf/: settings.py  urls.py
conf/conf/: settings.py
for/: apps.py  models.py
kam/: admin.py  apps.py  forms.py  models.py  script.py  tests.py  urls.py  views.py
kam/migrations/: 0001_initial.py  0002_alter_picture_image.py  0003_picture_name_alter_picture_id.py  0004_alter_picture_image.py  0005_album_picture_album.py
kam/static/css/: styles.css
kam/static/js/: home.js  picture.js
kam/templates/kam/: album.html  all_albums.html  base.html  create_album.html  gallery.html  home.html  manifest.json  picture.html  serviceworker.js
staticfiles/: staticfiles.json
staticfiles/js/: serviceworker.5adb75211381.js  serviceworker.d1b2136aaf03.js  serviceworker.js
staticfiles/templates/: offline.d42a8d381ce6.html
