[project]
name = "finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-allauth>=65.7.0",
    "pillow>=11.2.1",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "faker>=37.1.0",
]
